workspace/checkpoint/different_knobs_subset_10/lr_0.4/lr_decay/JT_6b/err_3.txt
  File "code/train.py", line 108
    from models.jt_q_three_layer as jt_quant 
                                 ^
SyntaxError: invalid syntax
